# resource_loader_cpp

./: .gitattributes  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  resource_loader.cc  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
cmake/: resource_loader.cmake
example/: CMakeLists.txt
example/app/: CMakeLists.txt  example_resource_one.txt  example_resource_two.txt  main.cc
example/app/resources/: example_resource_two.txt
example/liba/: CMakeLists.txt  example_resource_from_liba.txt  liba.cc  liba.h
example/libb/: CMakeLists.txt  example_resource_from_libb.txt  libb.cc  libb.h
example/libs/liba/: CMakeLists.txt  example_resource_from_lib.txt  example_resource_from_liba.txt  liba.cc
example/libs/liba/resource_loader_src/: resource_example_resource_from_liba.txt.cc  resource_loader.cc  resource_loader_cache.json
example/libs/liba/resources/: example_resource_from_lib.txt
example/libs/libb/: CMakeLists.txt  example_resource_from_lib.txt  libb.cc
example/libs/libb/resources/: example_resource_from_lib.txt
examples/resource_loader_generator_cmake_example/: CMakeLists.txt
examples/resource_loader_generator_cmake_example/app/resources/img/: origin.csv
examples/resource_loader_generator_cmake_example/app/resources/txt/: example_resource_one.txt
examples/resource_loader_generator_cmake_example/libs/liba/: liba.h
examples/resource_loader_generator_cmake_example/libs/liba/resources/: example_resource_from_liba.txt
examples/resource_loader_generator_cmake_example/libs/libb/: CMakeLists.txt
examples/resource_loader_generator_cmake_example/libs/libb/resources/: example_resource_from_libb.txt
examples/resource_loader_generator_template_output/: CMakeLists.txt  main.cc  resource_10d7e13243.cc  resource_89f94aa0c0.cc  resource_8c0c4a5e43.cc  resource_fd341f148f.cc  resource_loader.cc  resource_loader.h
python/: resource_loader_cache.json
python/resource_loader/: resource_loader.py
python/resource_loader/templates/: resource.cc.jinja  resource_loader.cc.jinja
python/resource_loader_generator/: resource_loader_generator.py
python/resource_loader_generator/static/: resource_loader.h
python/resource_loader_generator/templates/: resource.cc.jinja  resource_loader.cc.jinja
python/tests/: test_resource_loader.py  test_resource_loader_generator.py
python/tests/cxx/: test_util.cc
python/tests/resources/: example_a.xsd
resource_loader/: resource_loader.py
resource_loader/static/: resource_loader.cc  resource_loader.h
resource_loader/templates/: resource_loader.cc.jinja  resource_target.cc.jinja
resource_loader_generator/: resource_loader_generator.py
resource_loader_generator/resources/static/: resource_loader.h
scripts/: install_dependencies_arch.sh  install_dependencies_debian_ubuntu.sh
tests/: test_resource_loader.py
tests/cpp/: CMakeLists.txt  main.cc  resource_loader_test.cc
tests/cxx/: test_util.cc
tests/python/: test_resource_loader_generator.py
tests/python/resources/cxx/: test_util.cc
tests/resources/: example_a.txt  example_b.txt  example_b.xsd
